--- a/gestion-tareas-frontend/src/app/components/tarea-form/tarea-form.component.html
+++ b/gestion-tareas-frontend/src/app/components/tarea-form/tarea-form.component.html
@@ -1,1 +1,17 @@
-<p>tarea-form works!</p>
+<div class="container mt-3">
+    <h2>{{ tarea.id ? 'Editar' : 'Nueva' }} tarea</h2>
+    <form (ngSubmit)="onSaveTarea()">
+        <div class="form-group">
+            <label for="titulo">Titulo</label>
+            <input type="text" class="form-control" id="titulo" name="titulo" [(ngModel)]="tarea.titulo" required>
+        </div>
+        <div class="form-group">
+            <label for="descripcion">Descripcion</label>
+            <textarea class="form-control" name="descripcion" id="descripcion" [(ngModel)]="tarea.descripcion" rows="4"></textarea>
+        </div>
+        <div class="form-group">
+            <input type="checkbox" [(ngModel)]="tarea.completado" name="completado">
+        </div>
+        <button type="submit" class="btn btn-primary">{{ tarea.id ? 'Actualizar' : 'Guardar' }}</button>
+    </form>
+</div>
