--- a/gestion-tareas-frontend/src/app/components/navbar/navbar.component.html
+++ b/gestion-tareas-frontend/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,5 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="/">Gestión tareas</a>
+    </div>
+</nav>
